tests/semantic/execution_plan/execution_plan.err
Error: Invalid execution plan in file execution_plan.dl at line 17
        .plan 1: (1,2,2), 2: (3,2), 3: (2,3,1,3)
-----------------^-------------------------------
Error: Invalid execution plan in file execution_plan.dl at line 17
        .plan 1: (1,2,2), 2: (3,2), 3: (2,3,1,3)
-----------------------------^-------------------
Error: Invalid execution plan in file execution_plan.dl at line 17
        .plan 1: (1,2,2), 2: (3,2), 3: (2,3,1,3)
---------------------------------------^---------
3 errors generated, evaluation aborted
