tests/semantic/execution_plan/execution_plan.dl
.type S


.decl r(x:S,y:S)

r(a,d) :- r(a,b),r(b,c),r(c,d).

r(a,d) :- r(a,b),r(b,c),r(c,d).
        .strict

// this one is ok
r(a,d) :- r(a,b),r(b,c),r(c,d).
        .plan 1: (1,2,3), 2: (3,2,1), 3: (2,3,1)

// this one is not
r(a,d) :- r(a,b),r(b,c),r(c,d).
        .plan 1: (1,2,2), 2: (3,2), 3: (2,3,1,3)
